src/datafusion-local/src/tests/snapshots/liquid_cache_datafusion_local__tests__url_selection_and_ordering.snap
---
source: src/datafusion-local/src/tests/mod.rs
expression: "format!(\"plan: \\n{}\\nvalues: \\n{}\\nstats:\\n{}\", plan, values, stats)"
---
plan: 
┌───────────────────────────┐
│          SortExec         │
│    --------------------   │
│         URL@0 DESC        │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       DataSourceExec      │
│    --------------------   │
│          files: 1         │
│                           │
│          format:          │
│       liquid_parquet      │
└───────────────────────────┘

values: 
+-------------------------------------------------------------------------------------------------------------------------------+
| URL                                                                                                                           |
+-------------------------------------------------------------------------------------------------------------------------------+
| https://produkty%2Fpulove.ru/search_terms-vzyat_kobrye-russion/russia/piterators-tourse                                       |
| https://produkty%2Fpulove.ru/search_terms-vzyat_kobrye-russion/russia/piterators-tourse                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/tours.ru                                                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/tours.ru                                                                       |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fpulove.ru/booklyattion-ware/activaro.ru/cars.ru/footours-index.ru/files/item=11497449%26pz%3D0             |
| https://produkty%2Fplata.ru/filmId=e308f57e213e9eee96bcb752910-widget/tours.ru/product_priznaniya-1-metallic=0&engineVolumeTo |
| https://produkty%2Fplata.ru/filmId=e308f57e213e9eee96bcb752910-widget/tours.ru/product_priznaniya-1-metallic=0&engineVolumeTo |
| http://tours/Ekategoriya%2F&sr=http://slovareniye                                                                             |
+-------------------------------------------------------------------------------------------------------------------------------+
stats:
entries.total: 4
entries.after_first_run: 4
entries.memory.arrow: 0
entries.memory.liquid: 3
entries.disk.liquid: 1
entries.disk.arrow: 0
usage.memory_bytes: [bytes]
usage.disk_bytes: [bytes]
RuntimeStatsSnapshot:
  get: 3
  get_with_selection: 3
  eval_predicate: 4
  try_read_liquid_calls: 0
  read_io_count: 3
  write_io_count: 2
  disk_evictions: 0
  disk_reservation_failures: 0
  eval_predicate_on_liquid_failed: 0
